Alteracao index.html a partir do editor do GitHub

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,5 +3,7 @@
     <h1>Teste GIT</h1>
     <p>Teste de conflito</p>
     <p>Muito interessante esse curso de GIT</p>
+    <hr />
+    <p>Atualizacao do conteudo a partir do editor de texto do GitHub</p>
   </body>
 </html>
